Import of INGY/Alt-Acme-Math-XS-CPP-0.0.2.tar.gz from CPAN.
gitpan-cpan-distribution: Alt-Acme-Math-XS-CPP
gitpan-cpan-version:      0.0.2
gitpan-cpan-path:         INGY/Alt-Acme-Math-XS-CPP-0.0.2.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
 ---
+version: 0.0.2
+date:    Thu Dec 18 18:37:24 PST 2014
+changes:
+- Remove .travis from dist
+- Remove master from dist
+- Update pod
+---
 version: 0.0.1
 date:    Wed Dec 17 23:31:37 PST 2014
 changes:
