--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
 ---
+version: 0.0.3
+date:    Sun Dec 21 00:23:47 EST 2014
+changes:
+- Build on Inline::Module 0.27
+- Adds CppGuess support
+- Add dev modules to Makefile.PL
+---
 version: 0.0.2
 date:    Thu Dec 18 18:37:24 PST 2014
 changes:
