Import of INGY/Alt-Acme-Math-XS-CPP-0.0.4.tar.gz from CPAN.
gitpan-cpan-distribution: Alt-Acme-Math-XS-CPP
gitpan-cpan-version:      0.0.4
gitpan-cpan-path:         INGY/Alt-Acme-Math-XS-CPP-0.0.4.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.0.4
+date:    Tue Dec 23 12:22:26 PST 2014
+changes:
+- Fix smoker bug w/ Inline-Module-0.29
+---
 version: 0.0.3
 date:    Sun Dec 21 00:23:47 EST 2014
 changes:
