Import of INGY/Alt-Acme-Math-XS-CPP-0.0.5.tar.gz from CPAN.
gitpan-cpan-distribution: Alt-Acme-Math-XS-CPP
gitpan-cpan-version:      0.0.5
gitpan-cpan-path:         INGY/Alt-Acme-Math-XS-CPP-0.0.5.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.0.5
+date:    Wed Dec 24 22:05:31 PST 2014
+changes:
+- Use makestub and .inline
+---
 version: 0.0.4
 date:    Tue Dec 23 12:22:26 PST 2014
 changes:
